[package]
name = "gocyptowa"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gocyptowa"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
proc-macro2 = "=1.0.67"
# You may also need to pin these dependencies
quote = "=1.0.33"
syn = "=2.0.37"
