[package]
name = "gocyptowa"
version = "0.1.0"
description = "Cross Rollup Communication Protocol for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gocyptowa"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
